5.kubernetes-network/pg-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: lesson5
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
