5.kubernetes-network/rm-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
  namespace: lesson5
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
